TimesheetApp2.0/MetadataTimesheet/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeFullName__c</fullName>
        <formula>Employee__r.FirstName +&quot; &quot;+ Employee__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmployeeFullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <label>Friday</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Pay__c</fullName>
        <formula>Total_Week_Hours__c *  Hour_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Rate__c</fullName>
        <label>Hour Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <label>Monday</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(ISPICKVAL(Timesheet_Status__c, &quot;NOT SUBMITTED&quot;),&quot;NOT SUBMITTED&quot;,  IF(ISPICKVAL(Timesheet_Status__c, &quot;SUBMITTED&quot;),&quot;SUBMITTED&quot;, IF(ISPICKVAL(Timesheet_Status__c, &quot;APPROVED&quot;),&quot;APPROVED&quot;, IF(ISPICKVAL(Timesheet_Status__c, &quot;NOT APPROVED&quot;),&quot;NOT APPROVED&quot;, &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <formula>Gross_Pay__c * 0.09</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <label>Thursday</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Status__c</fullName>
        <label>Timesheet Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOT SUBMITTED</fullName>
                    <default>true</default>
                    <label>NOT SUBMITTED</label>
                </value>
                <value>
                    <fullName>SUBMITTED</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Week_Hours__c</fullName>
        <formula>Monday__c +  Tuesday__c + Wednesday__c + Thursday__c + Friday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Week Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <label>Tuesday</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <label>Wednesday</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Standard_list</fullName>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Gross_Pay__c</columns>
        <columns>Employee__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>Standard list</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>PTO</fullName>
        <active>true</active>
        <label>PTO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regular</fullName>
        <active>true</active>
        <label>Regular</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DailyHourValidation</fullName>
        <active>true</active>
        <description>Daily hours can&apos;t exceed 24 hours.</description>
        <errorConditionFormula>Monday__c &gt; 24  ||Thursday__c &gt; 24 || Tuesday__c &gt; 24 ||Wednesday__c &gt; 24 ||Friday__c &gt; 24</errorConditionFormula>
        <errorMessage>Daily hours can&apos;t exceed 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Validation</fullName>
        <active>true</active>
        <description>End Date must be the same as Start Date or after.</description>
        <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be the same as Start Date or after.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hour_rate_validation</fullName>
        <active>true</active>
        <description>Hour rate can&apos;t be over $100</description>
        <errorConditionFormula>Hour_Rate__c  &gt;100</errorConditionFormula>
        <errorDisplayField>Hour_Rate__c</errorDisplayField>
        <errorMessage>Hour rate can&apos;t be over $100</errorMessage>
    </validationRules>
</CustomObject>